test/compile_errors/err_unknown_method_primitive.w
//! expect-check-fail: unknown method 'nope' for type 'i64'

fn main:
    let j: i64 = 1i64
    print(j.nope())
